# secunda

./: .env.example  Dockerfile.api  README.md  docker-compose.yaml  fill_test_data.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_27_1336-c27db30f22b9_initial_migration.py
configuration/: base.py  exceptions.py  security.py
configuration/entities/: buildings.py  organizations.py
configuration/mapper/: activities.py  buildings.py  organizations.py
domain/entities/: activities.py  organizations.py
domain/mapper/: activities.py  buildings.py  organizations.py
infrastructure/db/: database.py  models.py
infrastructure/repositories/: activities.py  buildings.py  organizations.py
infrastructure/services/: activities.py  buildings.py  organizations.py
presentation/api/: app.py  dependencies.py
presentation/api/routes/: __init__.py  activity_router.py  building_router.py  organization_router.py
presentation/api/schemas/: activities.py  buildings.py  organization.py
